@@ -1,6 +1,7 @@
 package org.eclipse.linuxtools.sleepingthreads.launch;
 
 import org.eclipse.cdt.core.model.IBinary;
+import org.eclipse.debug.core.ILaunchConfigurationWorkingCopy;
 import org.eclipse.linuxtools.callgraph.launch.SystemTapLaunchShortcut;
 
 public class LaunchSleepingThreads extends SystemTapLaunchShortcut {
@@ -8,11 +9,11 @@ public class LaunchSleepingThreads extends SystemTapLaunchShortcut {
 	public void launch(IBinary bin, String mode) {
 		try {
 			name = "sleeping threads";
-			config = createConfiguration(bin, name);
+			ILaunchConfigurationWorkingCopy wc = createConfiguration(bin, name);
 			outputPath = "/home/chwang/sleeping.output";
 			binaryPath = bin.getResource().getLocation().toString();
 			arguments = binaryPath;
-			finishLaunch(name, mode);
+			finishLaunch(name, mode, wc);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
